--- a/Legal/index.html
+++ b/Legal/index.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html>
 	<head>
-		<script>window.location.href = "/documentation/Legal/Shadow%20Stream%20Supporters%20Privacy%20Policy.pdf"</script>
+		<script>
+			window.location.href = "/documentation/Legal/Shadow%20Stream%20Supporters%20Privacy%20Policy.pdf"
+		</script>
 	</head>
+	<body>
+		<noscript>
+			<a href="/documentation/Legal/Shadow%20Stream%20Supporters%20Privacy%20Policy.pdf">Click here to view the Privacy/Data Policy.</a>
+		</noscript>
+	</body>
 </html>
